# CNPq_IBOVPRO1

./: README.md  requirements.txt
.devcontainer/: devcontainer.json
IBOVPRO/: README.md  app.py  pyproject.toml
