[project]
name = "obinvest-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"

package-mode = false
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.47.1,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "yfinance (>=0.2.65,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


