[project]
name = "obinvest-proj"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.47.1,<2.0.0",
    "plotly>=6.2.0,<7.0.0",
    "yfinance>=0.2.65,<0.3.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



