[project]
name = "obinvest-proj"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "streamlit>=1.47.1,<2.0.0",
    "plotly>=6.2.0,<7.0.0",
    "pandas>=2.2.0,<3.0.0",
    "yfinance>=0.2.65,<0.3.0",
    "requests>=2.31.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "matplotlib>=3.8,<4.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "lxml>=4.9.2,<6.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"





